--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,7 @@
     <color name="silver">#C4C4C4</color>
     <color name="dorado">#715959</color>
     <color name="wild_sand">#F6F6F6</color>
+    <color name="verdun_green">#407600</color>
+    <color name="jade60">#9900A873</color>
+    <color name="clam_shell">#DBBCBC</color>
 </resources>
