--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout3"
-        android:layout_width="395dp"
+        android:layout_width="0dp"
         android:layout_height="161dp"
         android:background="@drawable/bg_image_go_expert"
         android:gravity="center"
@@ -75,6 +75,7 @@
         app:srcCompat="@drawable/ic_boat" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_started"
         android:layout_width="131dp"
         android:layout_height="33dp"
         android:layout_marginTop="48dp"
